@@ -1,6 +1,9 @@
 Release history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Incompatabilities]
+  - Pod::Weaver::Section::Requirements no longer guesses the prerequisites automatically. The added guess_prereqs option
+    will enable this.
 
 v0.4.3    2025-08-07 13:31:13+01:00 Europe/London
   [Bug Fixes]
